styles/global.css
/* ./styles/globals.css */
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .text-style {
    @apply px-8 mt-10 text-sm leading-relaxed lg:px-80 md:text-lg;
  }
  .text-title {
    @apply mb-5 text-lg font-semibold leading-7 lg:leading-10 lg:text-pxl;
  }
}

/* @layer components {
  .text-style {
    @apply gap-2 mx-auto mt-10 text-sm leading-6 px-80 lg:mt-24 md:text-lg;
  }
  .text-title {
    @apply text-lg font-semibold leading-relaxed tracking-tight lg:text-pxl;
  }
} */

